tests/lexer/fail/comment_no_end.c
/*this is a comment
1234678901234567890
